# ask

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
licenses/: Reshot.md
src/: ask.rs  gpt.rs  main.rs
