[package]
name = "gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
chatgpt_rs = { version = "1.2.3", features = ["streams"] }
clap = { version = "4.4.3", features = ["derive", "env"] }
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }

[package.metadata.deb]
maintainer = "John Michael Burke <bigburke@gmail.com>"
copyright = "2023, John Michael Burke <bigburke@gmail.com>"
extended-description = """Chatgpt binary."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/gpt", "usr/bin/", "755"],
    # ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]
