[package]
name = "ask"
description="Wrapper for chatgpt_rs"
version = "0.1.0"
edition = "2021"
authors = ["John Michael Burke <bigburke@gmail.com>"]

[dependencies]
chatgpt_rs = { version = "1.2.3", features = ["streams"] }
clap = { version = "4.4.3", features = ["derive", "env"] }
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }


[package.metadata.bundle]
name = "Ask"
identifier = "com.bigburke.ask"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
resources = ["icons/*.png"]
maintainer = "John Michael Burke <bigburke@gmail.com>"
copyright = "2023, John Michael Burke <bigburke@gmail.com>"
category = "Developer Tool"
short_description = "Wrapper for chatgpt_rs"
long_description = """
Ask is a wrapper for chatgpt_rs, a Rust implementation of OpenAI's GPT-3 chatbot.
Conversation history is stored in the temp folder to allow continued queries.
"""
osx_url_schemes = ["com.bigburke.ask"]
