[package]
name = "ask"
description="Simple binary for using chatgpt in terminal with temp history."
version = "0.1.3"
edition = "2021"
authors = ["John Michael Burke <bigburke@gmail.com>"]

[dependencies]
chatgpt_rs = { version = "1.2.3", features = ["streams"] }
clap = { version = "4.4.3", features = ["derive", "env"] }
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }


[package.metadata.bundle]
name = "Ask"
identifier = "com.bigburke.ask"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
resources = ["icons/*.png"]
maintainer = "John Michael Burke <bigburke@gmail.com>"
copyright = "2023, John Michael Burke <bigburke@gmail.com>"
category = "Developer Tool"
short_description = "Simple binary for using chatgpt in terminal with temp history."
long_description = """
Ask is binary for using chatgpt in terminal. It uses chatgpt_rs, which is a 
Rust wrapper for OpenAI's GPT chatbot API. Conversation history is stored in 
the temp folder to allow continued queries.
"""
osx_url_schemes = ["com.bigburke.ask"]
